Update on Login Page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   geolocator: ^9.0.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -21,3 +20,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  # Add the assets section here
+  assets:
+    - assets/applogo.png
