--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^1.2.2
   flutter_secure_storage: ^8.0.0
   geolocator: ^9.0.0
+  table_calendar: ^3.0.0
 
 dev_dependencies:
   flutter_test:
