--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   geolocator: ^9.0.0
   table_calendar: ^3.0.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +28,5 @@ flutter:
     - assets/applogo.png
     - assets/attendance_svg.png
     - assets/checkin.jpg
+    - assets/next.png
+    - assets/company.png
