Changes to Dashboard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,3 +40,6 @@ flutter:
     - assets/travel.png
     - assets/holidays.png
     - assets/task.png
+    - assets/leaveicon.png
+    - assets/calendar.png
+    - assets/11527831.png
